<resources>
    <string name="app_name">PELÍCULAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_titulo">Título de la película</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_anio">Año de salida</string>
    <string name="hint_genero">Género</string>
    <string name="hint_duracion">Duración minutos</string>
    <string name="hint_puntuacion">Puntuación</string>
    <string name="hint_idioma">Idioma</string>
    <string name="hint_trailer">URL tráiler</string>
    <string name="hint_portada">URL portada</string>

    <string name="fragment_title">Nueva película</string>
    <string name="menu_save">Guardar</string>
    <string name="message_save">¡Película registrada!</string>
    <string name="message_update">¡Película actualizada!</string>
    <string name="title_update">Editar película</string>
    <string name="title_insert">Registrar Película</string>
    <string name="dialog_delete">¿Eliminar película?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="dialog_options">¿Que desea hacer?</string>

</resources>